--- a/development/user-meas_sig_models.Rmd
+++ b/development/user-meas_sig_models.Rmd
@@ -230,27 +230,59 @@ b5_long %>% ggplot() +
 
 ## Now, visualizing crosscuts on top of an image.  
 
-Note: This is a better way to subset things (as to not get rid of Marco! Oops!)...  
+To do this, we need to first grab a few full x3p files (from the server), to render locally on my machine (because image_x3p doesn't work on the server).
+
+This first chunk of code should be commented out when working locally.  
 
 ```{r}
-user_crosscuts <- readRDS("../data/user_crosscuts.rda")
+#filenames <- list.files("/media/Sunny/CSAFE/User comparison scans/Round 1/Allison/Barrel 6", pattern = "*.x3p", full.names = T, recursive = T)
+#barrel6_ex <- data.frame(source = filenames)
+#barrel6_ex <- barrel6_ex %>% mutate(x3p = purrr::map(as.character(source), .f = function(filename){
+#  x3ptools::read_x3p(filename)
+#}))
 
-user_crosscuts <- user_crosscuts %>% 
-  mutate(scan_id = paste0(Barrel, "-", Land, "-", Bullet, "-", 
-                          Operator, "-", Machine, "-", Round))
-
-round4 <- user_crosscuts %>% 
-  filter(Round == "Round 4") %>%
-  filter(Scan == "Scan 2") %>%
-  mutate(Scan = "Scan 1")
-
-user_crosscuts <- user_crosscuts %>% 
-  filter(Round != "Round 4")
-
-user_crosscuts <- rbind(user_crosscuts, round4)
+#barrel6_ex <- barrel6_ex %>% mutate(source = purrr::map_chr(as.character(source), .f = function(source){
+#  strsplit(source, "scans/")[[1]][2]
+#}))
 
 
-user_crosscuts <- full_join(user_crosscuts, user_gt)
+#barrel6_ex <- barrel6_ex %>% mutate(Round = purrr::map_chr(as.character(source), .f = function(source){
+#  strsplit(source, "/")[[1]][1]
+#}), 
+#Operator = purrr::map_chr(as.character(source), .f = function(source){
+#  op <- strsplit(source, "/")[[1]][2]
+#  strsplit(op, " ")[[1]][1]
+#}), 
+#source = factor(str_replace_all(source, ";", " -")),
+#Barrel = purrr::map_chr(as.character(source), .f = function(source){
+#  strsplit(source, " - ")[[1]][2]
+#}), 
+#Bullet = purrr::map_chr(as.character(source), .f = function(source){
+#  strsplit(source, " - ")[[1]][3]
+#}), 
+#Land = purrr::map_chr(as.character(source), .f = function(source){
+#  strsplit(source, " - ")[[1]][4]
+#}), 
+#Machine = purrr::map_chr(as.character(source), .f = function(source){
+#  mac <- ifelse(str_detect(source, "Scan") == T, strsplit(source, " - ")[[1]][6], strsplit(source, " - ")[[1]][5]) 
+#  str_replace_all(mac, " ", "")
+#}), 
+#Scan = purrr::map_chr(as.character(source), .f = function(source){
+#  ifelse(str_detect(source, "Scan") == T, strsplit(source, " - ")[[1]][5], "Scan 1")
+#}))
+
+#head(barrel6_ex)
+
+##saveRDS(barrel6_ex, "../data/barrel6_example_x3p.rda")
+```
+
+
+This next chunk of code should be commented out when working on the server!! 
+
+```{r}
 
 ```
+
+
+
 
