images of barrel 6 land 5, acf plot code - kiegan

--- a/development/user-meas_groundtruth.Rmd
+++ b/development/user-meas_groundtruth.Rmd
@@ -193,6 +193,9 @@ user_rfscores %>%
 ## Making ground truth stuff.
 
 
+NEED TO BE CAREFUL ABOUT THIS! DON'T WANT TO HAVE TO REDO THE ENTIRE GT DOCUMENT. 
+
+
 ```{r}
 user_lands <- data.frame(land = unique(user_rfscores$land1))
 
