split viz by bullet - kiegan

--- a/development/user-meas_sig_models.Rmd
+++ b/development/user-meas_sig_models.Rmd
@@ -131,6 +131,19 @@ b6_long %>% ggplot() +
 ```
 
 
+```{r}
+b6_long %>% 
+  filter( unique_id == "BL 6-1") %>% 
+  ggplot() + 
+  geom_line(aes(x = x, y = sig2, group = scan_id, color = factor(Operator)), alpha = 0.7) + 
+  geom_line(aes(x = x, y = sig1), alpha = 0.8) + 
+  theme_bw() + 
+  facet_wrap(Bullet~unique_id, nrow = 2) + 
+  labs(title = "Hamby set Barrel 6")
+```
+
+
+
 
 ## BARREL 5 VIZ OF SIGNATURES  
 
