--- a/development/user-meas_sig_models.Rmd
+++ b/development/user-meas_sig_models.Rmd
@@ -13,20 +13,17 @@ library(bulletxtrctr)
 
 First, we want to add our "unique_id" for each land to the signature data, so we can group them by that and align the lands. 
 ```{r}
-## can probably just read in user_pairwise after running through the user-meas_groundtruth file... :) 
-
-
 user_sigs <- readRDS("../data/user_meas_sigs.rda")
+head(user_sigs)
 user_sigs <- user_sigs %>% 
-  mutate(scan_id = barrellandbullet) %>% 
-  select(-barrellandbullet) %>% 
+  select(-barrellandbullet, -barrelland) %>% 
   select(scan_id, sigs)
 head(user_sigs)
 
 user_gt <- read_csv("../data/user_gt.csv")
 user_sigs <- full_join(user_sigs, user_gt)
 
-head(user_sigs)
+user_sigs <- user_sigs %>% filter(Round != "Round 0")
 ```
 
 
@@ -47,8 +44,7 @@ b6l1_long <- barrel6land1 %>% unnest(sigs_aligned)
 b6l1_long %>% ggplot() + 
   geom_line(aes(x = x, y = sig2, group = scan_id, color = factor(Operator))) + 
   geom_line(aes(x = x, y = sig1)) + 
-  theme_bw() + 
-  facet_wrap(~Machine, nrow = 2)
+  theme_bw() 
 
 barrel6land2 <- user_sigs %>% filter(unique_id == "BL 6-2")
 barrel6land2 <- barrel6land2 %>% mutate(sigs_aligned = purrr::map(sigs, .f = function(row){
@@ -136,7 +132,8 @@ b6_long %>% ggplot() +
 
 ```{r}
 b6_long %>% 
-  filter( unique_id == "BL 6-5") %>% 
+  filter( unique_id == "BL 6-4") %>% 
+  filter(Operator == "Carley") %>%
   ggplot() + 
   geom_line(aes(x = x, y = sig2, group = scan_id, color = factor(Operator)), alpha = 0.7) + 
   geom_line(aes(x = x, y = sig1), alpha = 0.8) + 
@@ -241,6 +238,20 @@ b5_long %>% ggplot() +
   labs(title = "Hamby set Barrel 5")
 
 ```
+
+
+```{r}
+b5_long %>% 
+  filter( unique_id == "BL 5-4") %>% 
+  filter(Operator == "Carley") %>%
+  ggplot() + 
+  geom_line(aes(x = x, y = sig2, group = scan_id, color = factor(Operator)), alpha = 0.7) + 
+  geom_line(aes(x = x, y = sig1), alpha = 0.8) + 
+  theme_bw() + 
+  facet_wrap(Bullet~unique_id, nrow = 2) + 
+  labs(title = "Hamby set Barrel 6")
+```
+
 
 
 
